--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.8",
     "autoprefixer": "^9.8.6",
+    "axios": "^0.21.1",
     "formik": "^2.2.6",
     "postcss": "^7.0.35",
     "react": "^17.0.1",
