--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "autoprefixer": "^9.8.6",
     "axios": "^0.21.1",
     "formik": "^2.2.6",
+    "js-cookie": "^2.2.1",
     "postcss": "^7.0.35",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
