--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "axios": "^0.21.1",
     "formik": "^2.2.6",
     "js-cookie": "^2.2.1",
+    "mapbox-gl": "^2.1.1",
     "postcss": "^7.0.35",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-mapbox-autocomplete": "^0.2.3",
+    "react-mapbox-gl": "4.8.6",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
