--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mapbox-gl": "^2.1.1",
     "postcss": "^7.0.35",
     "react": "^17.0.1",
+    "react-cropper": "^2.1.7",
     "react-dom": "^17.0.1",
     "react-mapbox-autocomplete": "^0.2.3",
     "react-mapbox-gl": "4.8.6",
