--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^17.0.1",
     "react-mapbox-autocomplete": "^0.2.3",
     "react-mapbox-gl": "4.8.6",
+    "react-multi-date-picker": "^2.2.7",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
