--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.7",
+    "query-string": "^7.0.0",
     "tslint": "^6.1.3",
     "tslint-react": "^5.0.0",
     "typescript-tslint-plugin": "^1.0.1"
