--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-mapbox-gl": "4.8.6",
     "react-material-ui-carousel": "^2.2.1",
     "react-multi-date-picker": "^2.2.7",
+    "react-query": "^3.13.8",
     "react-read-more-read-less": "^1.0.7",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
