--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.21.1",
     "formik": "^2.2.6",
     "js-cookie": "^2.2.1",
+    "jsonwebtoken": "^8.5.1",
     "mapbox-gl": "^2.1.1",
     "postcss": "^7.0.35",
     "react": "^17.0.1",
