--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.8",
+    "apexcharts": "^3.26.3",
     "autoprefixer": "^9.8.6",
     "axios": "^0.21.1",
     "formik": "^2.2.6",
@@ -28,6 +29,7 @@
     "mapbox-gl": "^2.1.1",
     "postcss": "^7.0.35",
     "react": "^17.0.1",
+    "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.1",
     "react-lottie": "^1.2.3",
     "react-mapbox-autocomplete": "^0.2.3",
