--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "mapbox-gl": "^2.1.1",
+    "moment": "^2.29.1",
     "postcss": "^7.0.35",
     "react": "^17.0.1",
     "react-apexcharts": "^1.3.9",
